trunk/Archive2/f9/14b5b74293c41f/output
main.cpp: In function 'int main()':
main.cpp:29:10: error: expected ';' before 'to'
     time to;
          ^
main.cpp:29:12: warning: statement is a reference, not call, to function 'time' [-Waddress]
     time to;
            ^
main.cpp:29:12: warning: statement has no effect [-Wunused-value]
main.cpp:30:5: error: 'to' was not declared in this scope
     to.setSeconds(10000000);
     ^
main.cpp:31:5: error: 'cout' was not declared in this scope
     cout << to.getSeconds() << endl;
     ^
main.cpp:31:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:31:32: error: 'endl' was not declared in this scope
     cout << to.getSeconds() << endl;
                                ^
main.cpp:31:32: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/iostream:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
